css/style.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:700,800|Crimson");

@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

html,
body {
  font-family: "Crimson", serif;
  color: #2d3436;
  background-color: #fff;
}

h1,
h2,
h3 {
  font-family: "Montserrat", sans-serif;
  font-weight: 800;
}

h1 {
  font-size: 4rem;
  margin: 0.67em 0;
  text-align: center;
}

h2 {
  font-size: 3rem;
  margin-bottom: 0.83em;
  text-align: center;
}

h3 {
  font-size: 2rem;
  margin: 0.83em 0;
}

p {
  font-size: 1.1rem;
  line-height: 1.5;
  margin: 1em 0;
}

li {
  font-size: 1.1rem;
}

header {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #0984e3;
  text-align: center;
}

.navbar {
  list-style-type: none;
  font-family: "Montserrat", sans-serif;
  font-size: 0;
  font-weight: 700;
}

.navbar li {
  display: inline-block;
}

.navbar li a {
  display: block;
  padding: 10px;
  color: #fff;
  font-size: 1rem;
  text-decoration: none;
}

section {
  padding: 60px 20px;
}

.anchor {
  display: block;
  position: relative;
  top: -99px;
  visibility: hidden;
}

.container {
  display: grid;
  grid-gap: 10px 20px;
  margin: 0 auto;
  max-width: 1200px;
}

.btn {
  color: #fff;
  background-color: #0984e3;
  border-radius: 5px;
  padding: 10px;
  text-decoration: none;
  transition: background-color 0.5s ease;
}

.btn:hover {
  background-color: #2d3436;
}

.jumbotron-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  color: #000;
  background-color: #74b9ff;
}

.jumbotron-section .name {
  white-space: nowrap;
}

.jumbotron-section p {
  font-size: 2rem;
  text-align: center;
}

.jumbotron-section .btn {
  padding: 10px 20px;
}

.about-section .container {
  grid-template-columns: auto auto;
}

.about-section .about-img {
  border-radius: 50%;
}

.about-section a {
  color: #0984e3;
}

.skills-section {
  background-color: #dfe6e9;
}

.skills-section .container {
  grid-template-columns: 1fr 1fr 1fr;
}

.skills-section ul {
  margin: 1em 0;
  padding-left: 40px;
}

.projects-section > p {
  text-align: center;
}

.projects-section .container {
  grid-template-columns: 1fr 1fr 1fr;
}

.projects-section img {
  display: block;
  max-width: 100%;
  height: auto;
  margin: 0 auto;
  border-radius: 5px;
}

.social-section {
  color: #000;
  background-color: #b2bec3;
  text-align: center;
}

.social-section .container {
  grid-template-columns: auto auto auto;
  max-width: 600px;
}

.hidden {
  position: absolute;
  left: -10000px;
  top: auto;
}

.icon {
  width: 60px;
  height: 60px;
  padding: 12px;
  color: #fff;
  background-color: #2d3436;
  border-radius: 50%;
  transition: background-color 0.5s ease;
}

.icon:hover {
  background-color: #636e72;
}

@media screen and (max-width: 750px) {
  .skills-section .container {
    grid-template-columns: 1fr;
  }
}

@media screen and (max-width: 650px) {
  html {
    font-size: 14px;
  }

  .about-section .container,
  .projects-section .container {
    grid-template-columns: 1fr;
  }

  .about-section .about-img {
    margin: 0 auto;
  }
}

